# chromatic-weak-lensing

./: .gitmodules  README.md  pyproject.toml
notebooks/: blackbody.ipynb  btsettl.ipynb  diffsky.ipynb  fsps.ipynb  lsst_sim.ipynb  main_sequence.ipynb  phoenix.ipynb  roman_rubin.ipynb  stars.ipynb
src/chromatic_weak_lensing/: __init__.py  blackbody.py  galaxies.py  main_sequence.py  stars.py  utils.py
src/chromatic_weak_lensing/btsettl/: __init__.py  btsettl.py
src/chromatic_weak_lensing/diffsky/: __init__.py  diffsky.py  utils.py
src/chromatic_weak_lensing/diffsky/data/: .gitattributes  dsps_ssp_data_singlemet.h5
src/chromatic_weak_lensing/fsps/: __init__.py  fsps.py
src/chromatic_weak_lensing/lsst_sim/: __init__.py  lsst_sim.py
src/chromatic_weak_lensing/phoenix/: __init__.py  phoenix.py
src/chromatic_weak_lensing/roman_rubin/: __init__.py  roman_rubin.py  utils.py
