[project]
name = "chromatic-weak-lensing"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
description = ""
authors = [
    {name = "Sidney Mau", email = "sidneymau@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "astropy",
    "h5py",
    "galsim",
    "matplotlib",
    "numpy",
    "pyarrow",
]


[project.optional-dependencies]
fsps = [
    "fsps",
]
phoenix = [
    "pystellibs @ git+https://github.com/cahebert/pystellibs.git#egg=add-phoenix-data",
]
btsettl = [
    "pystellibs",
]
diffsky = [
    "diffmah==0.4.2",
    "diffstar==0.2.2",
    "dsps==0.3.5",
    "jax==0.4.19",
    "lsstdesc-diffsky==1.0.0",
    "scipy==1.10.1",
]
