[project]
name = "chromatic-weak-lensing"
license = {file = "LICENSE"}
readme = "README.md"
description = ""
authors = [
    {name = "Sidney Mau", email = "sidneymau@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "astropy",
    "dust_extinction",
    "h5py",
    "galsim",
    "matplotlib",
    "numpy",
    "pyarrow",
    "scipy",
]


[project.optional-dependencies]
btsettl = [
    "pystellibs @ git+https://github.com/sidneymau/pystellibs.git",
]
diffsky = [
    "diffmah==0.4.2",
    "diffstar==0.2.2",
    "dsps==0.3.5",
    "jax==0.4.19",
    "lsstdesc-diffsky==1.0.0",
    "scipy",
]
fsps = [
    "fsps",
]
lsst_sim =[
    "astro-datalab",
]
# phoenix = [
#     "pystellibs @ git+https://github.com/cahebert/pystellibs.git#egg=add-phoenix-data",
# ]
roman_rubin = [
    "diffmah==0.4.2",
    "diffstar==0.2.2",
    "dsps==0.3.5",
    "jax==0.4.19",
    "lsstdesc-diffsky==1.0.0",
    "scipy",
]
